lavf/segment: fix logic for segmenting audio-only inputs

Also add a comment for clarifying the logic.

Fix trac ticket #1290.